--- a/app/css/bdm_detail.css
+++ b/app/css/bdm_detail.css
@@ -81,6 +81,10 @@ b {
   float: right;
   font-size: 0.25rem;
   color: #1e4e8e; }
+  .score i {
+    font-size: 15px;
+    font-weight: normal;
+    color: #1e4e8e; }
 .colr {
   font-size: .18rem;
   color: #999; }
