--- a/app/css/ensuring_target.css
+++ b/app/css/ensuring_target.css
@@ -70,3 +70,5 @@ body {
     line-height: 49px;
     font-size: 15px;
     border-top: 1px solid #ccc; }
+  .target_ctrl .target_btn:active {
+    background: #266ada; }
