--- a/app/css/preference.css
+++ b/app/css/preference.css
@@ -177,3 +177,5 @@ body {
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.target_btn:active {
+  background: #266ada; }
