--- a/app/partials/bd_detail.html
+++ b/app/partials/bd_detail.html
@@ -33,7 +33,7 @@
 	
 </div>
 
-  <div class="weui_dialog_confirm" id="email_dialog" style="display:block">
+  <div class="weui_dialog_confirm" id="email_dialog" style="display:none">
     <form class="" role="form" name="sendForm" novalidate>
       <div class="weui_mask"></div>
       <div class="weui_dialog">
