--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=4c3499c91ad42d0526feddd719657727">
+<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=9eb028f721638fe2d92cbe55d061c78a">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom: 50px;">
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png"  ng-show="data.status==3" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;">
@@ -16,7 +16,7 @@
 					<div class="insured-item ">
 						<span class="gray three_word">保单号</span><span>：</span>
 						{{data.policy_no}}
-						<div class="score" ng-click="goScoreReading()">{{data.score | number:2}}<span class="colr">分</span></div>
+						<div class="score" ng-click="goScoreReading()">{{data.score | number:2}}<span class="colr">分</span><i class="iconfont">&#xe620;</i></div>
 					</div>
 					<div class="insured-item">
 						<span class="gray three_word">被保人</span><span>：</span>
