--- a/app/sass/preference.scss
+++ b/app/sass/preference.scss
@@ -164,6 +164,8 @@ body {background: #f5f5f5;line-height: normal;}
 	text-align: center;
 	line-height: 49px;
 	font-size: 15px;
-	
+}
+.target_btn:active {
+	background: #266ada;
 }
 
