--- a/app/css/bdm_list.css
+++ b/app/css/bdm_list.css
@@ -27,6 +27,9 @@ header .subtitle {
 .subtitle .money {
   color: #588dd4;
   font-weight: bold; }
+  .subtitle .money i {
+    font-size: 15px;
+    font-weight: normal; }
 .container {
   padding: 0.12rem;
   background-color: #f5f5f5;
@@ -145,9 +148,11 @@ header .subtitle {
   line-height: 50px; }
 .sub-container .bd-score {
   float: left; }
+.question .iconfont {
+  font-size: 15px; }
 .sub-container .bd-score span {
   font-size: 20px;
-  font-weight: bold; }
+  font-weight: normal; }
 .pei_button {
   display: inline-block;
   float: right;
