--- a/app/css/jk_bzts.css
+++ b/app/css/jk_bzts.css
@@ -1,24 +1,62 @@
 @charset "UTF-8";
-.blue {
-  background: #4285f4;
-  color: #fff;
-  border: none; }
-.sx-bzts {
-  padding: 0 0 50px;
-  font-size: 15px; }
-.sx-bzts_tit {
-  line-height: 15px;
-  padding: 14.5px 0;
-  margin: 0 10px;
+body {
+  background: #f5f5f5; }
+.jk_bzts {
+  background: #fff;
+  padding: 15px 10px;
+  margin-bottom: 10px;
   position: relative; }
-  .sx-bzts_tit::after {
+  .jk_bzts::after {
     pointer-events: none;
     position: absolute;
     z-index: 999;
     top: 0;
     left: 0;
     content: "\0020";
-    border-color: #e2e2e2;
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 1px 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .jk_bzts::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .jk_bzts::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+  .jk_bzts .jk_bzts_tit {
+    font-size: 15px;
+    color: #444; }
+  .jk_bzts .jk_bzts--blue {
+    color: #6fa5ff; }
+  .jk_bzts .jk_bzts_prompt {
+    color: #999;
+    font-size: 13px; }
+.bottom_ctrl {
+  position: relative;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 49px;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 4.5px 0; }
+  .bottom_ctrl::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #ccc;
     border-style: solid;
     border-width: 0 0 1px 0;
     -webkit-box-sizing: border-box;
@@ -26,169 +64,24 @@
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0; }
     @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      .sx-bzts_tit::after {
+      .bottom_ctrl::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(0.5);
         transform: scale(0.5); } }
     @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      .sx-bzts_tit::after {
+      .bottom_ctrl::after {
         width: 200%;
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
-.sx-bzts_tit_choose {
-  padding: 20px 0 0;
-  margin: 0 auto;
-  width: 240px; }
-.sx-bzts_tit_choose_tit {
-  color: #999;
-  font-size: 12px;
-  line-height: 12px;
-  margin-bottom: 10px; }
-.sx-bzts_tit_choose_year {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-lines: multiple;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap; }
-  .sx-bzts_tit_choose_year .miss {
-    height: 33px;
-    width: 110px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
+  .bottom_ctrl .finish {
+    height: 40px;
+    width: 250px;
+    background: #4285f4;
+    font-size: 15px;
+    color: #fff;
     text-align: center;
-    line-height: 33px;
+    line-height: 40px;
+    margin: 0 auto;
     border-radius: 5px; }
-  .sx-bzts_tit_choose_year .miss:nth-child(1) {
-    margin-bottom: 10px; }
-  .sx-bzts_tit_choose_year .miss:nth-child(odd) {
-    margin-right: 20px; }
-.sx-bzts_modify {
-  position: relative;
-  margin-top: 39px;
-  padding: 15px 10px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  line-height: 24px; }
-  .sx-bzts_modify::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: #ccc;
-    border-style: solid;
-    border-width: 1px 0 0 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      .sx-bzts_modify::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      .sx-bzts_modify::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
-  .sx-bzts_modify .sx-bzts_modify_Left {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -moz-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-     }
-    .sx-bzts_modify .sx-bzts_modify_Left .sx-bzts_modify_Left--colorBlue {
-      color: #4285f4; }
-    .sx-bzts_modify .sx-bzts_modify_Left .sx-bzts_modify_Left--colorGray {
-      color: #999; }
-  .sx-bzts_modify .sx-bzts_modify_Right {
-    width: 60px;
-    box-sizing: border-box;
-    height: 24px;
-    text-align: center;
-    line-height: 24px;
-    font-size: 12px;
-    border-radius: 5px;
-    border: 1px solid #ccc; }
-.sx-bzts_bottom {
-  position: relative;
-  position: fixed;
-  bottom: 0;
-  height: 49px;
-  width: 100%;
-  box-sizing: border-box;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 4.5px 10px;
-  font-size: 15px;
-  color: #444; }
-  .sx-bzts_bottom::after {
-    pointer-events: none;
-    position: absolute;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    content: "\0020";
-    border-color: #ccc;
-    border-style: solid;
-    border-width: 1px 0 0 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0; }
-    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      .sx-bzts_bottom::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5); } }
-    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
-      .sx-bzts_bottom::after {
-        width: 200%;
-        height: 200%;
-        -webkit-transform: scale(1/3);
-        transform: scale(1/3); } }
-.sx-bzts_bottom-word {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -moz-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-   }
-.sx-bzts_bottom-btn {
-  height: 40px;
-  width: 120px;
-  background: #4285f4;
-  color: #fff;
-  font-size: 15px;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 5px; }
-.sx-bzts_bottom-word--Left {
-  color: #444;
-  line-height: 40px;
-  display: inline-block; }
-.sx-bzts_bottom-word--Right {
-  margin-left: 5px;
-  color: #ff9000;
-  line-height: 40px;
-  display: inline-block; }
