--- a/app/css/scheme.css
+++ b/app/css/scheme.css
@@ -234,3 +234,5 @@
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.scheme_btn:active {
+  background: #266ada; }
