--- a/app/partials/newSelect.html
+++ b/app/partials/newSelect.html
@@ -37,7 +37,7 @@
 		<div id="log"></div>
 	</div>
 
-	<div  class="bt_container">
+	<div  class="bt_container" ng-hide="type==2">
 		<div style="line-height: 25px;">
 			<i class="iconfont" style="font-size: 18px;color:#588DD4;vertical-align: -2px;">&#xe603;</i> 选择保障金额
 			<div class="score2_container">
@@ -57,7 +57,7 @@
 	-->
     </div>
 
-<div  class="bottom_container" id="customerSlider">
+<div  class="bottom_container" id="customerSlider" ng-hide="type==2">
 	
 	<div class="weui_progress_bar" >
 		<div class="weui_progress_inner_bar" id="bar" style="width: 16px;">
@@ -118,7 +118,7 @@
 	</div>
 </div>
 
-<div ng-show="type==2">
+<!-- <div ng-show="type==2">
 	<div  class="bt_container">
 		<div style="line-height: 25px;">
 			<img src="img/global/dun.png" class="dun">
@@ -134,7 +134,7 @@
 			
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 <div class="mask" id="popup">
@@ -153,7 +153,7 @@
 </div>
 
 <!-- 健康and寿险 -->
-<!-- <div class="sx-bzts_modify" ng-show="type==2">
+<div class="sx-bzts_modify" ng-show="type==2">
 		<div class="sx-bzts_modify_Left"><i class="iconfont" style="font-size: 17px;color: #4285f4;margin-right：5px;">&#xe603;</i> 保险金额:<span class="colorBlue"> 30万</span> <span class="sx-bzts_modify_Left--colorGray"> ( 推荐值 )</span>
 		</div>
 		<div class="sx-bzts_modify_Left" style="padding-left: 22px;">保障期间：<span class="colorBlue">30年期</span></div>
@@ -166,10 +166,10 @@
 		<div class="sx-bzts_bottom-word--Right"><span>34903</span> 元</div>
 	</div>
 	<div class="sx-bzts_bottom-btn">生成方案</div>
-</div> -->
+</div>
 <!-- end -->
 
-<div class="fix_container select_btn">
+<div class="fix_container select_btn" ng-hide="type==2">
 	<div class="left" style="width: 65%;height: 48px;">
         <a class="left_btn left">
 			总 
