--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -10,7 +10,7 @@
   </div>
  
 
-  <div class="navigation" style="padding: 20px 0 30px;">
+  <div class="navigation" style="padding: 20px 0 30px;display: none;">
     <div class="navigation__leftbtn"></div>
     <div class="navigation__name">
       <div style="line-height: 13px;font-size: 13px;">本人</div> 
@@ -85,7 +85,7 @@
 
         <div class="pannel__body"  ng-show="pannelId==2">
 
-          <div class="pannel__body__item pannel__body__item_title">
+          <div class="pannel__body__item_title">
             <div class="pannel__body__item_fen">建议提升至8.0分 </div>
             <div class="pannel__body__item_btn" ng-click="goAutoPromote()"><i class="iconfont arrow_size" style="color:#4285f4;font-size:19px;" >&#xe62c;</i>一键提升</div>
           </div>
