--- a/app/sass/bdm_detail.scss
+++ b/app/sass/bdm_detail.scss
@@ -110,6 +110,11 @@ b {
 	float: right;
 	font-size: 0.25rem;
 	color: #1e4e8e;
+	i {
+		font-size: 15px;
+		font-weight: normal;
+		color: #1e4e8e;
+	}
 }
 .colr {
 	font-size: .18rem;
