--- a/app/sass/ensuring_target.scss
+++ b/app/sass/ensuring_target.scss
@@ -35,6 +35,9 @@ body {background: #f5f5f5;}
 		.blue {color: #fff;background: #55a5ff;border:none;}
 	}
 	.target_btn {position: fixed;left: 0;bottom: 0;width: 100%;height: 49px;background: #006ee9;color: #fff;text-align: center;line-height: 49px;font-size: 15px;border-top: 1px solid #ccc;}
+	.target_btn:active {
+		background: #266ada;
+	}
 }
 
 
