--- a/app/sass/userinfo_new.scss
+++ b/app/sass/userinfo_new.scss
@@ -217,3 +217,6 @@
 
 	
 .target_btn {@include border(1px 0 0 0,#e2e2e2);position: fixed;left: 0;bottom: 0;width: 100%;height: 49px;background: #006ee9;color: #fff;text-align: center;line-height: 49px;font-size: 15px;}
+.target_btn:active {
+		background: #266ada;
+	}
