--- a/app/include/global_config.html
+++ b/app/include/global_config.html
@@ -8,6 +8,14 @@
         WWW_PREFIX:    <?=json_encode(CGlobal::WWW_PREFIX)?>,
         WECHAT_PREFIX: <?=json_encode(CGlobal::WECHAT_PREFIX)?>,
 
+        USER: {
+            user_id:  <?=json_encode($USER_CONFIG['user_id'])?>,
+            nickname: <?=json_encode($USER_CONFIG['nickname'])?>,
+            avatar:   <?=json_encode($USER_CONFIG['avatar'])?>,
+            openid:   <?=json_encode($USER_CONFIG['openid'])?>,
+            unionid:  <?=json_encode($USER_CONFIG['unionid'])?>
+
+        },
 
         DEBUG: <?=json_encode(CGlobal::DEBUG)?>
 
@@ -15,3 +23,5 @@
     };
 
 </script>
+
+
