撤回一个url改动

--- a/app/partials/detail.html
+++ b/app/partials/detail.html
@@ -76,7 +76,7 @@
     <span class="subtitle">&nbsp;{{data.insurance_second_type}}&nbsp;&nbsp;</span>
     <span class="fr">
       查看
-      <a href="/api/web_page/{{data.information_page_id}}" target="_blank">
+      <a href="/ybwx-web/api/web_page/{{data.information_page_id}}" target="_blank">
         <span class="blue">投保须知</span>
       </a>
     </span>
