--- a/app/template/new/product_94.html
+++ b/app/template/new/product_94.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="/api/web_page/173" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="left"><a href="/ybwx-web/api/web_page/173" class="weui_btn weui_btn_plain_more">产品条款</a></div>
 				<div class="right"><a href="http://wechat.nuobei.cn/#/claim_information?claim_id=1" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
