--- a/app/partials/terms_list.html
+++ b/app/partials/terms_list.html
@@ -2,6 +2,6 @@
 <div class="terms_list_ctrl" data-ng-init="init()">
 	<div class="list_tit">投保前请仔细阅读下列条款：</div>
 	<div class="main">
-		<a ng-href="/api/web_page/{{items.provision_page_id}}" ng-repeat="items in data"><div class="word" >{{items.name}}<img src="img/global/arrows.png"></div></a>
+		<a ng-href="/ybwx-web/api/web_page/{{items.provision_page_id}}" ng-repeat="items in data"><div class="word" >{{items.name}}<img src="img/global/arrows.png"></div></a>
 	</div>
 </div> 
