--- a/app/template/new/product_82.html
+++ b/app/template/new/product_82.html
@@ -65,7 +65,7 @@
 
 	<div class="button-container">
 		<div class="left">
-			<a href="/api/web_page/115" class="weui_btn weui_btn_plain_more">产品条款</a>
+			<a href="/ybwx-web/api/web_page/115" class="weui_btn weui_btn_plain_more">产品条款</a>
 		</div>
 		<div class="right">
 			<a href="http://wechat.nuobei.cn/#/claim_information?claim_id=37" class="weui_btn weui_btn_plain_more">理赔资料</a>
